--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,25 @@
 @import "reset";
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+*{
+    font-family: 'poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    scroll-padding-top: 2rem;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+:root{
+    --main-color: #fd4646;
+    --text-color:#171427;
+    --bg-color:#fff;
+}
+img{
+    width: 100%;
+}
+body{
+     color: var(--text-color);
+}
