--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,19 +12,14 @@
     list-style: none;
     text-decoration: none;
 }
-:root{
-    --main-color: #fd4646;
-    --text-color:#171427;
-    --bg-color:#fff;
-}
-img{
-    width: 100%;
-}
+
+
 body{
-     color: var(--text-color);
+    background: #fff;
+    
 }
 .container{
-    max-width: 1068px;
+    max-width: 1064px;
     margin: auto;
     width: 100%;
 }
@@ -32,24 +27,111 @@ body{
 
 header
 {
-    position:fixed; 
+    position: fixed;
+    background: white;
     top: 0;
     left: 0;
     width: 100%;
-    background:var(--bg-color);
     box-shadow: 0 1px 4px hsl (0 4% 15% / 10%);
+    border-bottom: solid #cbcbcb;
+    z-index: 100;
 }
-
 .nav{
+    justify-content: space-between;
     display: flex;
     align-items: center;
+    padding: 20px 100px;
+}
+#card-icon{
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
+.section-title{
+display: flex;
+width: 55%;
+text-align: left;
+margin: 0 auto;
+margin-top: 100px;
+margin-bottom: 20px;
+font-size: 40px;
+justify-content: space-between;
+
+}
+
+
+
+           /*Filter*/
+
+aside{
+width: 60%;
+           }
+.filter-colors{
+    display: flex;
+    flex-direction: column;
+}
+
+.filter_title{
+    margin: 10px 0px;
+    font-size: 20px;
+}
+.filter-tamanho button{
+width: 30px;
+margin: 5px;
+background: white;
+border: 1px solid  #cbcbcb;
+color: #cbcbcb;
+cursor: pointer;
+}
+.filter-tamanho button:active{
+    color: #000000;
+    border: 1px solid #00bff3;
+}
+
+
+
+     /*Boxs*/
+.shop-content{
+    display: flex;
     justify-content: space-between;
-    padding: 20px 0;
-
+    gap: 1.5rem;
+    flex-flow: row wrap;
 }
-.logo{
+
+.product-box{
+    position: relative;
+    text-align: center;
+}
+
+.product-box:hover{
+    transform: scale(1.05);
+    border: 1px solid rgb(0, 0, 0);
+    transition: 0.4s;
+}
+.product-img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 0.5rem;
+}
+.product-title{
     font-size: 1.1rem;
-    color: var(--text-color);
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
 }
- 
-
+.product-box button{
+    color: white;
+    background: black;
+    width: 100%;
+    height: 45px;
+    border:  2px solid rgb(0, 0, 0);
+}
+.button-carregar-mais{
+    text-align: center;
+    margin: 20px auto;
+    margin-left: 870px;
+    color: white;
+    background: #00bff3;
+    padding: 10px;
+    border: 1px solid #00bff3 ;
+}
